--- a/style.css
+++ b/style.css
@@ -38,14 +38,68 @@ nav li a{
     border-radius: 20px;
     background-color: deeppink;
     color: white;
+    border: none;
 }
+.logo{
+    border-top: 2px solid gray;
+    border-bottom: 2px solid gray;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 50px 80px;
+    padding: 20px;
+}
+.logo img{
+    width: 100%;
+}
+.popular-section h2{
+    text-align: center;
+}
+
+.popular{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin:4em 10em;
+    margin-bottom: 1em;
+    row-gap: 30px;  
+    column-gap: 30px;
+     
+}
+.popular div{
+    padding: 10px; 
+    box-shadow:5px 5px 5px  gray;
+    background-color:white;
+}
+.popular  img{
+   width: 100%;
+}
+.feature{
+    display: flex;
+    margin-top: 50px;
+    gap: 8em;
+    padding: 80px;
+}
+.feature h2{
+    font-size: 40px;
+}
+.btn2{
+    padding: 7px 20px;
+    border-radius: 5px;
+    background-color: deeppink;
+    color: white;
+    border: none;
+}
+.imge{
+}
+
 
 
 
 @media screen and (max-width:576px){
     nav,
-    nav ul
-   
+    nav ul,
+    .logo,
+    .feature
     {
         flex-direction: column;
     }
@@ -61,7 +115,70 @@ nav li a{
      }
      .banner img{
         width: 110%;
-        align-items: center;
+        
      }
+     .logo{
+        gap: 30px;
+     }
+     .popular{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        margin: 0;
+     }
+     .feature{
+        padding: 0;
+        gap: 5px;
+     }
+      .feature-contant{
+        padding: 1em;
+
+     }
+     .feature img{
+        padding: 1em;
+     }
+     
+     
+    
+     
    
 }
+
+@media screen and (min-width:576px) and (max-width:992px){
+    nav,
+    .banner
+    {
+        flex-direction: column;
+    }
+    .banner{
+        padding-top: 5px;
+        gap: 20px;
+    
+    }
+    .banner img{
+        width: 50%;
+        padding-left: 200px;  
+    }
+    .logo{
+        gap: 20px;
+    }
+    .popular{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        margin: 0;
+     }
+     .feature{
+        flex-direction: column-reverse;
+        gap: 20px;
+        padding: 0;
+
+     }
+     .feature-contant{
+        margin-top: 5px;
+        padding: 5px 40px;
+     }
+     .feature img{
+        padding: 1em 5em;
+     }
+     
+}
+
